--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,24 +7,29 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.4",
-    "vuex": "^3.6.2",
-    "element-ui": "^2.15.14",
     "axios": "^0.27.2",
     "echarts": "^5.4.3",
-    "moment": "^2.29.4"
+    "element-ui": "^2.15.14",
+    "moment": "^2.29.4",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "babel-loader": "^8.3.0",
     "babel-plugin-component": "^1.1.1",
+    "chalk": "^2.4.2",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
@@ -49,4 +54,3 @@
     "not ie <= 8"
   ]
 }
-
