--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
-spring.application.name=asd
+spring.application.name=asd-nutrition-system
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/asd_nutrition_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Bawawa945
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server Configuration
+server.port=8081
+
+# Logging
+logging.level.com.own.asd=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+# AI API Configuration
+ai.api.token=sk-bitihjqsmpuhrqwugrbnwtzixuyulxtrcnnacbgqjcistdvn
+ai.api.url=https://api.siliconflow.cn/v1/chat/completions
+ai.api.model=Pro/zai-org/GLM-4.7
+
